namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata: 
  name: development
  labels: 
     name: development
