service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-all-service
  namespace: development
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      name: http
  selector:
    app: helloworld
