ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: helloworld-ingress
  namespace: development
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: helloworld-all-service
              servicePort: 80
